# wd-infernal

./: .gitignore  Cargo.toml  Procfile  README.md  build.sh  config.json.template  restart.sh
src/: change_wiki.rs  crosscats.rs  given_names.rs  google_books.rs  initial_search.rs  isbn.rs  location.rs  main.rs  person.rs  referee.rs  reference.rs  server.rs  viaf.rs  wikidata.rs
static/: languages.json  months.json  result.html  root.html
test_files/: google_books.xml
