[package]
name = "wd-infernal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
axum = { version = "0.7.9", features = [
	"http1",
	"http2",
	"tokio",
	"json",
	"macros",
] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tower-http = { version = "*", features = ["full"] }
wikibase = "*"
mediawiki = "*"

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1
