[package]
name = "wd-infernal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
axum = { version = "0.7.9", features = [
	"http1",
	"http2",
	"tokio",
	"json",
	"macros",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde-xml-rs = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tower-http = { version = "*", features = ["full"] }
wikibase = "*"
mediawiki = "*"
futures = "*"
url = "*"
async-lazy = "*"
lazy_static = "*"
regex = "*"
reqwest = "*"
chrono = "*"
urlencoding = "*"
anyhow = "*"
goodreads-metadata-scraper = "*"
isbn = "*"
wikibase_rest_api = "*"
wikimisc = { git = "https://github.com/magnusmanske/wikimisc.git" }
tools_interface = { git = "https://github.com/magnusmanske/tools_interface.git" }

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1
