[package]
name = "wd-infernal"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = [
	"http1",
	"http2",
	"tokio",
	"json",
	"macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["full"] }
wikibase = "0.7"
mediawiki = "0.3"
futures = "0.3"
url = "2"
async-lazy = "0.1"
regex = "1"
reqwest = "0.12"
chrono = "0.4"
urlencoding = "2"
anyhow = "1"
goodreads-metadata-scraper = "0.2"
isbn = "0.8"
# lingua = "*"
# whatlang = "*"
wikibase_rest_api = "0.1"
wikimisc = { git = "https://github.com/magnusmanske/wikimisc.git" }
tools_interface = "0.1"
# toolforge = { version = "*", features = ["wikipool"] }

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1
